--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <div>Hello There we are in index.ejs</div>
+    <header>
+        <h1 class="logo">Vaulify</h1>
+        <button>Logout</button>
+    </header>
+
+    <section class="search-create">
+        <input type="text" placeholder="Search for a vault">
+        <button>Create Vault</button>
+    </section>
+
+    <section class="vault-type">
+        <h2>My Vaults</h2>
+        <div class="vaults">
+            <div class="vault">
+                <h3>Personal</h3>
+                <p>Created on: 12/12/2020</p>
+                <button>Open</button>
+                <button>Edit</button>
+                <button>Delete</button>
+            </div>
+            <div class="vault">
+                <h3>Work</h3>
+                <p>Created on: 12/12/2020</p>
+                <button>Open</button>
+                <button>Edit</button>
+                <button>Delete</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
