--- a/public/css/index.css
+++ b/public/css/index.css
@@ -150,7 +150,7 @@ body .search-create {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.767);
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(5px);
@@ -205,7 +205,8 @@ body .search-create {
     color: var(--dark-gray);
     padding: 0.6rem 1rem;
     border: none;
-    border-radius: 0.25rem;
+    font-size: 1.1rem;
+    border-radius: 0.65rem;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
