Implement overlay functionality for vault creation; update styles, add new scripts, and refine vault schema

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -25,7 +25,7 @@
 
     <section class="search-create">
         <input type="text" placeholder="Search for a vault">
-        <button>Create Vault</button>
+        <button class="createVaultBtn">Create Vault</button>
     </section>
 
     <section class="vault-type">
@@ -47,7 +47,8 @@
             </div>
         </div>
     </section>
-
+    <script src="/js/getVaultContainer.js"></script>
+    <script src="/js/overlay.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
