--- a/public/css/index.css
+++ b/public/css/index.css
@@ -150,7 +150,7 @@ body .search-create {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.767);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(5px);
