--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,6 +62,7 @@ body .search-create {
 }
 
 .search-create input {
+    color: #cbd5e1;
     padding: 0.6rem 1rem;
     border: 1px solid var(--light-gray);
     border-radius: 0.6rem;
