--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,9 +15,23 @@
                 <input type="text" name="description" placeholder="description">
                 <button>Create</button>
             </form>
+            <div class="close closeEditButton"><ion-icon name="close-outline"></ion-icon></div>
+        </div>
+    </div>
+
+    <div class="overlay updatedata">
+        <div class="modal">
+            <h2>Update Vault</h2>
+            <form>
+                <input type="text" name="title" placeholder="title">
+                <input type="text" name="description" placeholder="description">
+                <button>Update</button>
+            </form>
             <div class="close"><ion-icon name="close-outline"></ion-icon></div>
         </div>
     </div>
+    
+    
     <header>
         <h1 class="logo">Vaulify</h1>
         <button>Logout</button>
